Set up CI with Azure Pipelines
[skip ci]

--- a/azure-pipelines-1.yml
+++ b/azure-pipelines-1.yml
@@ -20,3 +20,13 @@ pool:
     mavenAuthenticateFeed: false
     effectivePomSkip: false
     sonarQubeRunAnalysis: false
+- task: Docker@2
+  inputs:
+    containerRegistry: 'docker2'
+    command: 'login'
+- task: Docker@2
+  inputs:
+    containerRegistry: 'docker2'
+    repository: 'siva81261/dockerrepo'
+    command: 'buildAndPush'
+    Dockerfile: '**/AzureDockerfile'
